Hafta 1 degisken tipleri işlendi.

--- a/Hafta_01_Degiskenler/degiskenler_giris.ipynb
+++ b/Hafta_01_Degiskenler/degiskenler_giris.ipynb
@@ -44,6 +44,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -86,10 +93,13 @@
     "Python Yapı Taşları\n",
     "- Sabitler\n",
     "    * Herhangi bir değerin sabit olarak tanımlanmasıdır. Örneğin 3.14159, \"Emre\". Buradaki değerler sabitlerdir.\n",
+    "    * Sabitlerden kaçınılmalı. Kodumuz bol değişkenli az sabitli olmalı. \n",
     "- Fonksiyonlar\n",
     "    * Birden fazla işlemi yapmak için bir iş yığınını tek bir işleve(fonksiyona) çevirerek daha anlaşılabilir ve daha küçük kodlar yazabiliriz.\n",
+    "    * Fonksiyonlar mümkün olduğunca çok kullanılmalı. Fonksiyonların parametreleri ve değerleri vardır.\n",
     "- Değişkenler\n",
-    "    * Değişkenler, herhangi bir değerni saklanmasına yardımcı olan değişkenlerdir. Örneğin \"isim\", \"yas\", ve \"şehir\" değişkenleri."
+    "    * Değişkenler, herhangi bir değerni saklanmasına yardımcı olan değişkenlerdir. Örneğin \"isim\", \"yas\", ve \"şehir\" değişkenleri.\n",
+    "    * Değişkenler sabitlerden fazla olmalı."
    ]
   },
   {
@@ -249,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +271,7 @@
     }
    ],
    "source": [
-    "# print(4 * 365.25 * 24 * 60 * 60)\n",
-    "\n",
+    "# print(4 * 365.25 * 24 * 60 * 60) # Kalite 3\n",
     "# 4 yılda kaç saniye olduğunu gösteren program\n",
     "\n",
     "yil_sayisi = 4\n",
@@ -372,8 +381,13 @@
     "uzun_kenar = 5\n",
     "dikdortgen_alani = kisa_kenar * uzun_kenar\n",
     "\n",
-    "print(f\"Dikdörtgen'nin alani: {dikdortgen_alani}\")"
+    "print(f\"Dikdörtgen'in alani: {dikdortgen_alani}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -383,16 +397,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fonksiyonlar giriş."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dairenin alanının hesaplayan bir fonksiyon yazalım.\n",
+    "def daire_alan_hesapla(radius,pi=3.14):\n",
+    "    sonuc = pi * radius ** 2\n",
+    "    print(f\"Daire'nin alanı: {sonuc}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Daire'nin alanı: 78.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "daire_alan_hesapla(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kare'nin alanının hesaplayan bir fonksiyon yazalım.\n",
+    "def kare_alan_hesapla(kenar):\n",
+    "    sonuc = kenar ** 2\n",
+    "    print(f\"Kare'nin alanı: {sonuc}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kare'nin alanı: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "kare_alan_hesapla(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dikdörtgen'in alanını hesaplayan bir fonksiyon yazalım.\n",
+    "def dikdortgen_alan_hesapla(kisa_kenar,uzun_kenar):\n",
+    "    sonuc = kisa_kenar * uzun_kenar\n",
+    "    print(f\"Dikdörtgen'in alanı: {sonuc}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dikdörtgen'in alanı: 15.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dikdortgen_alan_hesapla(3,5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "string = \"Hello World\"\n",
-    "integer = 369\n",
-    "listo = [1,2,3,\"text\",[\"another_one_string_element_list\"]]\n",
-    "dicto = {\"key\":\"value\",\"another\":\"one\",\"listem\":listo,\"dictception\":{\"oh\":\"a dict!\"}}"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -404,7 +507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sanalortam",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
