eksik degiskenlerin oldugu hucreler eklendi.

--- a/Hafta_01_Degisken_Tipleri/degisken_tipleri.ipynb
+++ b/Hafta_01_Degisken_Tipleri/degisken_tipleri.ipynb
@@ -416,6 +416,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tip Dönüşümleri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.23423\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "benim_numaram_string = \"1.23423\"\n",
+    "print(benim_numaram_string)\n",
+    "print(type(benim_numaram_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.23423\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "benim_numaram_float = float(benim_numaram_string)\n",
+    "print(benim_numaram_float)\n",
+    "print(type(benim_numaram_float))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
