Refactored mean calculation method.

--- a/Hafta_01_Degiskenler_ve_Tipleri/Odev.ipynb
+++ b/Hafta_01_Degiskenler_ve_Tipleri/Odev.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "7ed474fd-69ff-4c69-a972-c938e5501f2e",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Öğrencinin ortalam notu 56'dır.\n"
+      "Öğrencinin ortalama notu 56'dır.\n"
      ]
     }
    ],
@@ -52,11 +52,14 @@
     "# Notların ortalamasını hesaplayalım\n",
     "ortalama = statistics.mean(notlar)\n",
     "\n",
+    "not_sayisi = 3\n",
+    "ortalama = (not_1+not_2+not_3) / not_sayisi\n",
+    "\n",
     "# Ortalamayı integer tipine çevirelim\n",
     "integer_ortalama = int(ortalama)\n",
     "\n",
     "# Ortalamayı yazdıralım\n",
-    "print(f\"Öğrencinin ortalam notu {integer_ortalama}'dır.\")"
+    "print(f\"Öğrencinin ortalama notu {integer_ortalama}'dır.\")"
    ]
   },
   {
