Alternative House Price calculation practices.

--- a/Hafta_01_Degiskenler_ve_Tipleri/degisken_tipleri_egzersizler.ipynb
+++ b/Hafta_01_Degiskenler_ve_Tipleri/degisken_tipleri_egzersizler.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
     "default_value:float = 80000.0\n",
     "bedroom:float = 30000.0\n",
     "bathroom:float = 10000.0\n",
-    "basement:float = 40000\n",
+    "basement:float = 40000.0\n",
     "print(bedroom)\n",
     "\n",
     "house_1 = [bedroom,bathroom]\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,17 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ev_fiyat_hesapla(yatak_odasi_sayisi,banyo_sayisi,bodrum_varmi=False):\n",
-    "    return default_value + (bedroom * yatak_odasi_sayisi) + (bathroom * banyo_sayisi) + (basement if  bodrum_varmi else 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +169,70 @@
     }
    ],
    "source": [
+    "# OK ama global değişkenlere bağlı\n",
+    "def ev_fiyat_hesapla(yatak_odasi_sayisi,banyo_sayisi,bodrum_varmi=False):\n",
+    "    return default_value + (bedroom * yatak_odasi_sayisi) + (bathroom * banyo_sayisi) + (basement if  bodrum_varmi else 0)\n",
+    "\n",
     "fiyat = ev_fiyat_hesapla(Ev_1.yatak_odasi_sayisi,Ev_1.banyo_sayisi,Ev_1.bodrum_varmi)\n",
     "print(f\"Evin fiyatı: {fiyat}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First house's price is $120000.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CostCalculator:\n",
+    "\n",
+    "    base_cost = 80000.0\n",
+    "    bedroom_cost = 30000.0\n",
+    "    bathroom_cost = 10000.0\n",
+    "    basement_cost = 40000.0\n",
+    "\n",
+    "    def calculate_price(self):\n",
+    "\n",
+    "        return self.base_cost + (self.bedroom_cost * self.bedroom_num) + (self.bathroom_cost * self.bathroom_num) + (self.basement_cost if  self.has_basement else 0)\n",
+    "\n",
+    "class House(CostCalculator):\n",
+    "\n",
+    "    def __init__(self,bedroom_num,bathroom_num,has_basement):\n",
+    "        self.bedroom_num = bedroom_num\n",
+    "        self.bathroom_num = bathroom_num\n",
+    "        self.has_basement = has_basement\n",
+    "\n",
+    "house_1 = House(1,1,False)\n",
+    "house_1_price = house_1.calculate_price()\n",
+    "\n",
+    "print(f\"First house's price is ${house_1_price}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Second house price is $190000.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "house_2 = House(2,1,True)\n",
+    "house_2_price = house_2.calculate_price()\n",
+    "\n",
+    "print(f\"Second house's price is ${house_2_price}.\")"
    ]
   }
  ],
